# trending-research

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.cursor/rules/: llm-providers.mdc  project-standards.mdc  publish-release.mdc  web-app.mdc  web-search.mdc
.cursor/skills/nails-trend-research/: SKILL.md
config/: preferred_sources.yaml
infra/: Pulumi.dev.yaml  Pulumi.yaml  README.md  index.ts  package-lock.json  package.json  tsconfig.json
projects/spa-market-validation/: README.md
projects/spa-market-validation/interviews/: execution-kit.md
projects/spa-market-validation/outcomes/: conclusions.md  content-preference-summary.md  cross-interview-comparison.md  market-fit-by-region.md  next-steps.md  pain-point-severity.md  pilot-landing-copy.md  pricing-summary.md
projects/spa-market-validation/specs/: competitor-landscape.md  content-generation-concepts.md  (+4 more)
releases/: v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.4.0.md
samples/: user_preferences.json
samples/market-validation/: mock-social-post.json
scripts/: publish.sh
specs/: database.md  image-generation.md  nails-trending.md  publish-release.md  social-post-platforms.md
src/willbe_trends/: __init__.py  cli.py  config.py
tests/: test_api.py  test_google_trends.py  test_images.py  test_locales.py  test_media.py  test_media_integration.py  test_media_storage.py  test_models.py  test_search.py  test_sora.py  test_time_context.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
(+115 files in other folders)
