[project]
name = "willbe-trends"
version = "0.2.1"
description = "AI-powered trending research for beauty and nails"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.55.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "ddgs>=9.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "fastapi[standard]>=0.115.0",
]

[project.scripts]
willbe-trends = "willbe_trends.cli:app"
willbe-api = "willbe_trends.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/willbe_trends"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: live API tests (run with OPENAI_API_KEY and pytest -m integration)",
]
